Fix pre blocks going out of container by using minmax in grids

--- a/_sass/_grid.scss
+++ b/_sass/_grid.scss
@@ -1,7 +1,7 @@
 body {
 	display: grid;
 	grid-template-rows: repeat(3, auto);
-	grid-template-columns: 3vw 1fr 3vw;
+	grid-template-columns: 3vw minmax(100px, 1fr) 3vw;
 }
 .site-header {
 	grid-column: 2 / 3;
@@ -20,7 +20,7 @@ main {
 		grid-column: 1 / -1;
 		> div {
 			display: grid;
-    	grid-template-columns: auto 1fr auto;
+    	grid-template-columns: auto minmax(100px, 1fr) auto;
     	grid-template-rows: repeat(2, auto);
 		}
 		.home-link, address, address > .tag, address > .tag > span {
@@ -52,7 +52,7 @@ main {
 }
 @media(min-width: 900px){//from 900 to 1126
 	body {
-		grid-template-columns: 2.5% 30% 65% 2.5%;
+		grid-template-columns: 2.5% minmax(100px, 30%) minmax(100px, 65%) 2.5%;
 	}
 	nav {
 		grid-column: 3 / 4;
@@ -72,6 +72,6 @@ main {
 }
 @media(min-width: 1126px){//1126 up
 	body {
-		grid-template-columns: 5% 25% 65% 5%;
+		grid-template-columns: 5% minmax(100px, 25%) minmax(100px, 65%) 5%;
 	}
 }
